force-app/main/default/objects/MetroFlatFileData__c/MetroFlatFileData__c.object-meta.xml
<CustomObject>
    <label>MetroFlatFileData</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MetroFlatFileData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MetroFlatFileDatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>