force-app/main/default/objects/MetroFlatFileData__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <description>to remove duplicate HEADER and TRAILER</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>