force-app/main/default/objects/MetroFlatFileData__c/fields/Bureau_Type__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Type__c</fullName>
    <description>Bereau type for which file is generated</description>
    <label>Bureau Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equifax</fullName>
            </value>
            <value>
                <fullName>TransUnion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>