force-app/main/default/objects/MetroFlatFileData__c/fields/Dateofbirth__c.field-meta.xml
<CustomField>
    <fullName>Dateofbirth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dateofbirth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>