force-app/main/default/objects/MetroFlatFileData__c/fields/FooterCheck__c.field-meta.xml
<CustomField>
    <fullName>FooterCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FooterCheck</description>
    <inlineHelpText>FooterCheck</inlineHelpText>
    <label>FooterCheck</label>
    <type>Checkbox</type>
</CustomField>