force-app/main/default/objects/MetroFlatFileData__c/fields/HeaderCheck__c.field-meta.xml
<CustomField>
    <fullName>HeaderCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HeaderCheck</description>
    <label>HeaderCheck</label>
    <type>Checkbox</type>
</CustomField>