force-app/main/default/objects/MetroFlatFileData__c/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <description>Open date returned as text after conversion</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Open date returned as text after conversion</inlineHelpText>
    <label>Open Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>