force-app/main/default/objects/MetroFlatFileData__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <description>PhoneNumber</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>PhoneNumber</inlineHelpText>
    <label>PhoneNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>