force-app/main/default/objects/MetroFlatFileData__c/fields/PhoneNumberProduct__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumberProduct__c</fullName>
    <description>PhoneNumberProduct</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>PhoneNumberProduct</inlineHelpText>
    <label>PhoneNumberProduct</label>
    <length>100</length>
    <type>Text</type>
</CustomField>