force-app/main/default/objects/MetroFlatFileData__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Product object to track the data</description>
    <inlineHelpText>Lookup to the Product object to track the data</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>MetroFlatFileDatas</relationshipLabel>
    <relationshipName>MetroFlatFileDatas</relationshipName>
    <type>Lookup</type>
</CustomField>