force-app/main/default/objects/MetroFlatFileData__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <description>ProductId</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ProductId</inlineHelpText>
    <label>ProductId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>