force-app/main/default/objects/MetroFlatFileData__c/fields/RowData1__c.field-meta.xml
<CustomField>
    <fullName>RowData1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RowData1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>