force-app/main/default/objects/MetroFlatFileData__c/fields/SIN__c.field-meta.xml
<CustomField>
    <fullName>SIN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>